--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.1"
   },
   "scripts": {
